--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,10 +1,11 @@
-FROM node:lts-alpine3.16 AS base
+FROM node:16-alpine AS base
 
 # Stage_1 BUILD
 FROM base AS build
 WORKDIR /usr/src/app
 
 COPY package.json .
+RUN npm update
 RUN npm install
 COPY . .
 RUN npx tsc -p ./tsconfig.json
